fix align

--- a/frontend/src/css/global.scss
+++ b/frontend/src/css/global.scss
@@ -206,7 +206,6 @@ code {
 }
 
 .styled-heading {
-  color: $brand;
   font-weight: bold;
   font-size: 3.2rem;
 }
